# ntk-kappa-heuristic-validation

./: .gitignore  LICENSE  README.md  data.ipynb  exact_pg.py  grads.py  kappa.py  model.py  plots.py  pyproject.toml  run_validation.py
tables/: results.tex
